fix the layout issues of the about page so that row has max height that doesn't stretch past nav bar

--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-body {
+body, html {
   margin: 0;
 }
 
@@ -47,6 +47,7 @@ body {
 }
 .row {
   background-color: #F9FAFF;
+  max-width: 100%;
   padding-left: 45px;
   padding-right: 45px;
   display: flex;
