--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,5 +1,6 @@
-body {
+body, html {
   background-color: #F9FAFF;
+  margin: 0;
 }
 
 //INTRODUCTION SECTION
