--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,11 @@
 .container-fluid {
   // width: 95%;
 }
+
+body, html {
+  margin: 0;
+}
+
 .navbar {
   width: 100vh;
 
