--- a/app/assets/stylesheets/components/_resume.scss
+++ b/app/assets/stylesheets/components/_resume.scss
@@ -8,8 +8,9 @@
   box-sizing: border-box;
 }
 
-body {
+body, html {
   background-color: white;
+  margin: 0;
 }
 
 //SLOGAN
